--- a/research/index.html
+++ b/research/index.html
@@ -2,4 +2,7 @@
 layout: default
 title: Research
 ---
-<h1>"Research"</h1>
+<div class="blurb">
+	<h1>Research</h1>
+	<p>I love studying proteins!</p>
+</div>
