--- a/research.html
+++ b/research.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Research
+---
 {% for topic in site.research_topics %}
   <h2>{{ topic.topic }}</h2>
   <p>{{ topic.content | markdownify }}</p>
