--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Caitie McCafferty
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Caitie</h1>
-	<p>I looooove computers!</a></p>
+	<h1>Hi there, I'm Caitie!</h1>
+	<p>Caitie text goes here.</p>
 </div><!-- /.blurb -->
